Remove dead code and unify A* enter-hole handoff
- Drop unused findPath overloads, 5-arg PathResult ctor, and no-op isGoal wrapper
- Delete unused STUCK_REPLAN_TICKS, free-route boost no-op machinery, getPlannedTarget
- Cost intermediate solid cells in tryDigDownEdges and stop scanning past unbreakables
- Share one isEnterHolePhase helper between MobPathManager and MobEntityMixin
- Compare dimensions with equals(), make isSharedRouteStillOpen side-effect free
- Rename debug path methods (no networking implied), simplify nodeBudget clamp
- Remove broken baritone gitlink and ignore the comparison folder